[package]
name = "quantize-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
salience-engine = { path = "../salience-engine", features = ["server"] }
ns-router-rs = { path = "../ns-router-rs" }
llm-rs = { path = "../llm-rs" }
kvquant-rs = { path = "../kvquant-rs" }

# CLI and Serialization
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utils
anyhow = "1.0"
thiserror = "1.0"

# Optional features
[features]
default = ["python", "openblas"]
python = ["pyo3"]
lua = ["mlua"]
openblas = ["openblas-src"]

# Optional dependencies
openblas-src = { version = "0.10", optional = true }  # For BLAS acceleration
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }
mlua = { version = "0.9", optional = true }
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.5"

# Performance
bincode = "1.3"  # For efficient binary serialization
lz4_flex = "0.10"  # For compression
parking_lot = "0.12"  # For efficient synchronization

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

[profile.bench]
debug = true

[dev-dependencies]
actix-rt = "2.5"
serde_test = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
wiremock = "0.5"

[build-dependencies]
tonic-build = "0.10"
pyo3-build-config = { version = "0.19", optional = true }

[workspace]
members = [
    "salience-engine",
    "ns-router-rs",
    "llm-rs",
    "kvquant-rs",
    "quantize-cli"
]
resolver = "2"


[package.metadata]
description = "Zeta Reticula: A Rust-based AI framework for building and deploying machine learning models."
license = "Apache-2.0"
