[package]
name = "salience-engine"
version = "0.1.1"
edition = "2021"
description = "A Rust-based salience engine for processing and analyzing text with web API support"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]  # Enable WASM and Python bindings

[dependencies]
actix-web = { version = "4.11.0", optional = true }
actix-rt = { version = "2.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
env_logger = { version = "0.10.2", optional = true }
lazy_static = "1.5.0"
wasm-bindgen = { version = "0.2.92", optional = true }
js-sys = { version = "0.3.69", optional = true }

[dev-dependencies]
actix-test = "0.1.1"
actix-rt = "2.10.0"
serde_test = "1.0.219"

[features]
default = ["server"]
server = ["actix-web", "actix-rt", "env_logger"]
wasm = ["wasm-bindgen", "js-sys"]
enterprise = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-release]
opt-level = "z"  # Optimize for size
lto = true  # Enable link-time optimization
codegen-units = 1  # Single code generation unit for better optimization



