[package]
name = "salience-engine"
version = "0.1.1"
edition = "2021"
description = "A Rust-based salience engine for processing and analyzing text with web API support"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]  # Enable WASM and Python bindings

[dependencies]
actix-web = { version = "4.3", optional = true, features = ["rustls"] }
actix-rt = { version = "2.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = { version = "0.10", optional = true }
lazy_static = "1.4"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
bumpalo = "3.0"
rayon = "1.5"
dashmap = "5.0"
rand_chacha = "0.3"
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
actix-test = "0.1.1"
actix-rt = "2.5"
serde_test = "1.0"

[features]
default = ["server"]
server = ["actix-web", "actix-rt", "env_logger"]
wasm = ["wasm-bindgen", "js-sys"]
enterprise = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-release]
opt-level = "z"  # Optimize for size
lto = true  # Enable link-time optimization
codegen-units = 1  # Single code generation unit for better optimization



