[package]
name = "zeta-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
llm_rs = { path = "../llm-rs" }
kvquant_rs = { path = "../kvquant_rs" }
ns-router-rs = { path = "../ns-router-rs" }
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["ns-router-rs/server"]
server = ["ns-router-rs/server"]
