[package]
name = "zeta-shared"
version = "0.1.0"
edition = "2021"
authors = ["Zeta Reticula Team <team@zetareticula.com>"]
license = "MIT OR Apache-2.0"
description = "Shared utilities and types for Zeta Reticula components"
homepage = "https://github.com/zetareticula/zeta-reticula"
repository = "https://github.com/zetareticula/zeta-reticula"
documentation = "https://docs.rs/zeta-shared"
readme = "../../README.md"
keywords = ["shared", "utilities", "types", "common", "zeta"]
categories = ["rust-patterns", "data-structures", "development-tools"]
rust-version = "1.70"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
