[package]
name = "zeta-unified-input"
version = "0.1.0"
edition = "2021"
authors = ["Zeta Reticula Team <team@zetareticula.com>"]
license = "MIT OR Apache-2.0"
description = "Unified input layer for handling safetensors and JSON models from Hugging Face"
homepage = "https://github.com/zetareticula/zeta-reticula"
repository = "https://github.com/zetareticula/zeta-reticula"
documentation = "https://docs.rs/zeta-unified-input"
readme = "../../README.md"
keywords = ["huggingface", "safetensors", "models", "input", "unified"]
categories = ["api-bindings", "data-structures", "encoding"]
rust-version = "1.70"
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }

# Hugging Face and model support
safetensors = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Additional dependencies
regex = "1.10"
dashmap = { workspace = true }
half = "2.3"
memmap2 = "0.9"
async-trait = { workspace = true }

[features]
default = ["safetensors-support", "hf-support"]
safetensors-support = []
hf-support = []
gpu = []
