[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zeta"
path = "src/main.rs"

[dependencies]
zeta-shared = { path = "../../core/shared" }
inference = { path = "../../runtime/inference" }
kv-cache = { path = "../../core/kv-cache" }
quantization = { path = "../../core/quantization", features = ["clap"] }
salience = { path = "../../core/salience" }
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
