[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
zeta-shared = { path = "../../core/shared" }
kv-cache = { path = "../../core/kv-cache" }
quantization = { path = "../../core/quantization" }
salience = { path = "../../core/salience" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
