[package]
name = "p2pstore"
version = "0.1.0"
edition = "2021"
authors = ["Zeta Reticula Team"]
description = "Peer-to-peer storage service for Zeta Reticula"
repository = "https://github.com/zetareticula/zeta-reticula/tree/main/src/p2pstore"
license = "Apache-2.0"

[lib]
name = "p2pstore"
path = "src/lib.rs"

[[bin]]
name = "p2pstore"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-opentelemetry = "0.20"
tracing-tower = { version = "0.2", features = ["http"] }

# Metrics
metrics = "0.20"
metrics-exporter-prometheus = { version = "0.11", default-features = false }
metrics-util = "0.14"

# Network and async
libp2p = { version = "0.50", features = ["tcp-tokio", "mplex", "noise"] }
async-trait = "0.1"

# HTTP server for metrics endpoint
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.5"

[build-dependencies]
vergen = { version = "8.0", features = ["build", "git", "gitcl"] }
